Fixed double scrollbar in legends and fixed wrapper (scroller) in dashboards

--- a/app/src/css/mx_base.css
+++ b/app/src/css/mx_base.css
@@ -708,7 +708,9 @@ blockquote {
     resize: none;
   }
 }
-.mx-panel-left label {
+
+.mx-panel-left label,
+.mx-view-legend-group label {
   font-weight: normal;
 }
 
