--- a/app/src/js/button_panel/style.css
+++ b/app/src/js/button_panel/style.css
@@ -35,7 +35,7 @@
   min-width: 100px;
   max-width: calc(100vw - 60px);
   max-height: calc(100vh - 60px);
-  overflow: auto;
+  overflow: hidden;
   z-index: 0;
   padding: 0px;
   border-radius: 10px;
@@ -62,9 +62,9 @@
 
 .button-panel-content {
   position: absolute;
+  height: calc( 100% - 35px );
   width: 100%;
-  height: 100%;
-  max-height: 100%;
+  max-height: calc( 100% - 35px );
   max-width: 100%;
   border-top: 1px solid var(--mx_ui_border);
   overflow: auto;
